<resources>
    <string name="app_name">ballgame</string>
    <string name="play_game_button">start game</string>
    <string name="username">Anonymous</string>
    <string name="menu_lobby">Multi player</string>
    <string name="nav_solo">Single player</string>
    <string name="nav_high_score">High score</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout_login">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_join_game">Join game</string>
    <string name="button_start_game">Start game</string>
    <string name="players_in_lobby">Players in lobby</string>
    <string name="not_connected">not connected</string>
    <string name="connecting">connecting</string>
    <string name="needToLogIn">You need to be logged in to use this action</string>
    <string name="logout">Log out</string>
    <string name="login">Login</string>
    <string name="RestApiUnableToConnect">Unable to connect to game servers REST API</string>
    <string name="baseUrl" translatable="false">http://172.18.87.101:3173/api/</string>
    <string name="newHighscore">WUUT!! New Highscore. You Rock!</string>
    <string name="newNotHighscore">Congrats on position %s</string>
    <string name="ToAutoSyncEnable">To autoSync highscores, you must be logged in</string>
    <string name="language" translatable="false">language</string>
    <string name="title_language_list">Select the correct language</string>
    <string name="button_show_highscore">Show Global Highscore List</string>
    <string name="highscore_posistion">Position: %s )</string>
    <string name="highscore_score">Score: %s</string>
    <string name="logged_out">Logged out!</string>
    <string name="logged_in">Logged In!</string>
    <string name="you_are_now">You are now %s</string>
    <string name="lobby_status_connected">connected</string>
    <string name="lobby_status_not_connected">not connected</string>
    <string name="lobby_toast_error_unable_to_leave_lobby">Unable to leave lobby lol</string>
    <string name="lobby_button_connect">Connect</string>
    <string name="lobby_button_find_lobby">Find lobby</string>
    <string name="lobby_button_leave_lobby">Leave lobby</string>
    <string name="game_server_connection" translatable="false">10.0.0.87:3173</string>
    <string name="game_server_connection_title">Game Server Connection</string>
    <string name="highscore_congrats">Congratulation!</string>
    <string name="highscore_congrats_best">Congratulation!  It\'s a personal best!</string>
    <string name="set_base_url">Set base url</string>
    <string name="base_url_sum">Base URL for game server</string>
</resources>
