<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/language">

        <ListPreference
            android:key="languagekey"
            android:title="@string/title_language_list"
            android:entries="@array/supported_languages"
            android:entryValues="@array/supported_languagesCodes"
            android:defaultValue="default"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/game_server_connection_title">

        <EditTextPreference
            android:title="@string/set_base_url"
            android:key="settings_game_server_connection"
            android:summary="@string/base_url_sum"
            android:defaultValue="@string/baseUrl"
            />

    </PreferenceCategory>


</PreferenceScreen>