<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- looking for a game -->
    <!-- no game found, created new one => waiting for players -->
    <!-- a player joined. Starting game in 10 seconds -->
    <!-- show number of players in game, more can join during the timeout of 10sec -->
    <!-- when the game has started, each player must send data to the server saying they have joined -->
    <!-- once joined, set a 3 second timeout ? -->

    <!-- -->
    <!--
    <SeekBar
        android:id="@+id/seekBar_amount_of_players"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10"
        />
    -->

    <!-- status -->
    <TextView
        android:id="@+id/textView_lobby_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/menuItemEnabled"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:text="@string/connecting"/>
    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_lobby_status"
        android:layout_centerHorizontal="true" />

    <!-- players that have joined -->
    <TextView
        android:id="@+id/textView_players_title"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/listview_lobby_joined_players"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-247dp"
        android:textColor="@color/menuItemEnabled"
        android:textStyle="bold"
        android:padding="10dp"
        android:text="@string/players_in_lobby" />
    <ListView
        android:id="@+id/listview_lobby_joined_players"
        android:layout_width="match_parent"
        android:layout_height="272dp"
        android:layout_above="@+id/button_start_lobby_game"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="247dp" />

    <!-- join a lobby -->
    <Button
        android:id="@+id/button_start_lobby_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:gravity="center|bottom"
        android:text="@string/button_join_game" />


</RelativeLayout>
